<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.chooselevel.ChooseLevelFragment">

    <TextView
        android:id="@+id/tvUpperIntermediate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/upper_intermediate_text"
        app:layout_constraintEnd_toEndOf="@+id/btnBSecond"
        app:layout_constraintStart_toStartOf="@+id/btnBSecond"
        app:layout_constraintTop_toBottomOf="@+id/btnBSecond" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:elevation="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAFirst"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#45c3f2"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/a1_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnASecond"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#a96052"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/a2_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBFirst"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#68b1e0"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/b1_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnAFirst"
        app:layout_constraintStart_toStartOf="@+id/btnAFirst"
        app:layout_constraintTop_toBottomOf="@+id/btnAFirst" />

    <Button
        android:id="@+id/btnBSecond"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#db722f"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/b2_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnASecond"
        app:layout_constraintStart_toStartOf="@+id/btnASecond"
        app:layout_constraintTop_toBottomOf="@+id/btnASecond" />

    <TextView
        android:id="@+id/tvBeginner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/beginner_text"
        app:layout_constraintEnd_toEndOf="@+id/btnAFirst"
        app:layout_constraintStart_toStartOf="@+id/btnAFirst"
        app:layout_constraintTop_toBottomOf="@+id/btnAFirst" />

    <TextView
        android:id="@+id/tvElementary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/elementary_text"
        app:layout_constraintEnd_toEndOf="@+id/btnASecond"
        app:layout_constraintStart_toStartOf="@+id/btnASecond"
        app:layout_constraintTop_toBottomOf="@+id/btnASecond" />

    <TextView
        android:id="@+id/tvIntermediate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/intermadiate_text"
        app:layout_constraintEnd_toEndOf="@+id/btnBFirst"
        app:layout_constraintStart_toStartOf="@+id/btnBFirst"
        app:layout_constraintTop_toBottomOf="@+id/btnBFirst" />

</androidx.constraintlayout.widget.ConstraintLayout>